MCR-3670 minor improvements